--- a/interactive_draft/style.css
+++ b/interactive_draft/style.css
@@ -7,17 +7,30 @@ section {
 body {
   font-family: sans-serif;
 }
-table {
-  margin: 1em;
-}
-tbody > tr > td {
-  border-top: 1px solid black;
-}
-thead {
-  font-weight: bold;
-}
 svg {
   border: 1px dashed grey;
 }
-style-src 'self' https://fonts.googleapis.com
-font-src 'self' https://fonts.gstatic.com
+.text {
+  position: absolute;
+  left: 450px;
+  top: 80px;
+}
+.tooltip {
+  position: absolute;
+  padding: 8px;
+  background: white;
+  border: 1px solid #333333;
+  border-radius: 4px;
+  pointer-events: none;
+  font-family: sans-serif;
+  font-size: 14px;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.buttons {
+  position: absolute;
+  left: 450px;
+  top: 80px;         
+}
