--- a/www/style.css
+++ b/www/style.css
@@ -31,6 +31,32 @@ svg {
 }
 .buttons {
   position: absolute;
+  left: 910px;
+  top: 75px;
+}
+.buttons2 {
+  position: absolute;
+  left: 500px;
+  top: 180px;         
+}
+.text {
+  position: absolute;
+  left: 250px;
+  top: 60px;         
+}
+.text2 {
+  position: absolute; 
+  left: 250px;
+  top: 80px;  
+}
+.text3 {
+  position: absolute; 
   left: 450px;
-  top: 80px;         
+  top: 80px;  
+}
+.text4 {
+  position: absolute; 
+  left: 650px;
+  top: 80px;  
+  width: 200px;
 }
