--- a/www/style.css
+++ b/www/style.css
@@ -4,16 +4,14 @@ section {
   padding-left: 1em;
   margin: 1em;
 }
+h1 {
+  text-align: left;
+}
 body {
   font-family: sans-serif;
 }
 svg {
   border: 1px dashed grey;
-}
-.text {
-  position: absolute;
-  left: 450px;
-  top: 80px;
 }
 .tooltip {
   position: absolute;
@@ -26,37 +24,39 @@ svg {
   font-size: 14px;
 }
 .container {
-  max-width: 1200px;
   margin: 0 auto;
+  align-content: center;
 }
 .buttons {
   position: absolute;
-  left: 910px;
+  left: 700px;
   top: 75px;
 }
-.buttons2 {
+.button2 {
   position: absolute;
-  left: 500px;
-  top: 180px;         
+  left: 325px;
+  top: 125px;
+  margin: 10px;
+}
+.button3 {
+  position: absolute;
+  left: 450px;
+  top: 125px;
+  margin: 10px;
+}
+.button4 {
+  position: absolute;
+  left: 700px;
+  top: 125px;
+  margin: 10px;
 }
 .text {
   position: absolute;
-  left: 250px;
+  left: 20px;
   top: 60px;         
 }
 .text2 {
   position: absolute; 
-  left: 250px;
-  top: 80px;  
-}
-.text3 {
-  position: absolute; 
-  left: 450px;
-  top: 80px;  
-}
-.text4 {
-  position: absolute; 
-  left: 650px;
-  top: 80px;  
-  width: 200px;
+  left: 90px;
+  top: 90px;  
 }
